k8s/deployment-python.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-python-deployment
  labels:
    app: app-python
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app-python
  template:
    metadata:
      labels:
        app: app-python
    spec:
      containers:
      - name: app-python
        image: beleet/devops-app-python:latest
        ports:
        - containerPort: 80
