k8s/elixir_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: app-elixir
  name: app-elixir
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 3
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: app-elixir
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: app-elixir
    spec:
      containers:
      - image: sl1depengwyn/elixir_devops:arm64
        imagePullPolicy: IfNotPresent
        name: elixir-devops
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
