k8s/pod-with-init-container.yaml
apiVersion: v1
kind: Pod
metadata:
  name: demo-0
spec:
  volumes:
    - name: shared-data
      emptyDir: {}

  containers:
    - name: main-container
      image: busybox
      command: ['sleep', '3600']  
      volumeMounts:
        - mountPath: /shared-data
          name: shared-data
