k8s/statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: app_python
  name: app_python
  namespace: app_python
spec:
  replicas: 3
  serviceName: app_python
  selector:
    matchLabels:
      app: app_python
  podManagementPolicy: Parallel
  template:
    metadata:
      labels:
        app: app_python
    spec:
      containers:
        - image: rinnatova/docker_lab:latest
          name: app_python
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
              protocol: TCP
          volumeMounts:
            - name: editor-config
              mountPath: /etc/config
            - name: visits
              mountPath: /app_python
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 512Mi
      dnsPolicy: Default
      volumes:
        - name: editor-config
          configMap:
            name: editor-config
        - name: visits
          persistentVolumeClaim:
            claimName: visits

  volumeClaimTemplates:
    - metadata:
        name: visits
      spec:
        accessModes:
          - ReadWriteMany
        resources:
          requests:
            storage: 32Mi
