k8s/service-go.yml
apiVersion: v1
kind: Service
metadata:
  name: app-go-service
spec:
  type: LoadBalancer
  selector:
    app: app-go
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30180
