k8s/service-python.yml
apiVersion: v1
kind: Service
metadata:
  name: app-python-service
spec:
  type: LoadBalancer
  selector:
    app: app-python
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30080
