k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: app-python-svc
spec:
  selector:
    app: python
  ports:
    - protocol: TCP
      port: 8008
      targetPort: 8008
  type: LoadBalancer
