k8s/ingress.yaml
apiVersion: networking.k8s.io/v1

kind: Ingress

metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: app.python
      http:
        paths:
          - path: /python
            pathType: Prefix
            backend:
              service:
                name: app-python
                port:
                  number: 8080
